Alignment and font sizes fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,11 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 .LBFont {
   font-family: 'The Nautigal', cursive !important;
-  font-size: 36px !important;
+  font-size: 96px !important;
+}
+
+.headerLogo {
+  height: 125px;
 }
 
 h1, .h1 {
@@ -3952,6 +3956,7 @@ textarea.form-control-lg {
   color: #f4623a;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  font-size: x-large;
 }
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
@@ -11346,7 +11351,7 @@ hr.divider-light {
   color: #6c757d;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
